description = 'Lib OGC'

allprojects  {
  repositories {
    mavenCentral()
  }

  group = 'org.sensorhub'
  version = '1.5.0'
}

subprojects {
  apply plugin: 'java-library'
  apply plugin: 'maven-publish' 
 
  sourceCompatibility = 11
  targetCompatibility = 11
  ext.details = null
  ext.pom = {} // pom data that subprojects can append to
  
  tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
    options.compilerArgs << "-Xlint:-options"
  }
  
  tasks.withType(Javadoc) {
    options.encoding = 'UTF-8'
    options.addStringOption('Xdoclint:none', '-quiet')
  }

  // default test dependencies
  dependencies {
    testImplementation 'junit:junit:4.13'
    testImplementation 'xmlunit:xmlunit:1.6'
  }
}
